--- a/crates/marduk-engine/Cargo.toml
+++ b/crates/marduk-engine/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.102"
+bytemuck = { version = "1.25.0", features = ["derive"] }
+env_logger = "0.11.9"
+log = "0.4.29"
+pollster = "0.4.0"
+raw-window-handle = "0.6.2"
+wgpu = "28.0.0"
+winit = "0.30.12"
