Implement multi-window support and integrate ouroboros for self-referencing structures
Signed-off-by: egg <zacharie.cote@hotmail.ca>

--- a/crates/marduk-studio/Cargo.toml
+++ b/crates/marduk-studio/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 marduk-engine = { path = "../marduk-engine" }
 marduk-ui = { path = "../marduk-ui" }
+anyhow = "1.0.102"
