--- a/crates/marduk-studio/Cargo.toml
+++ b/crates/marduk-studio/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 marduk-engine = { path = "../marduk-engine" }
 marduk-ui = { path = "../marduk-ui" }
 anyhow = "1.0.102"
+wgpu = "28.0.0"
+winit = "0.30.12"
